
	Added AuxWin highlight group for highlighting auxiliary parts of windows.

	Added 'millerview' option that enables cascading columns interface for the
	view.  Thanks to sudo-nice.

	Added 'milleroptions' option that configures miller view.

	Added [r/]r/[R/]R normal mode shortcuts that map to :siblprev and :siblnext
	with and without wrapping correspondingly.  Thanks to filterfalse.

	Changed :filter command to accept pattern (//, ////, {} or {{}}).  Thanks
	to rbong.

	Improved parsing of optional numbers in vifminfo.  Thanks to Aris
	Fergadis (a.k.a. afergadis).

	Indicate preview created with %q with "Command: cmd".

	Better detection of write errors on file copying.  The error was reported,
	but it wasn't treated as a hard error specific case related to caching.

	Made :siblnext and :siblprev commands respect dot and name filters.

	Disabled spell checking of vifm files in Vim except for comments.

	H/M/L keys in ls-like view now account for columns.

	Made :siblnext and :siblprev accept [count] range.  Thanks to filterfalse.

	Made :tree pick up list of files from custom view.  Thanks to filterfalse.

	Do not go to start of line on Ctrl-U/Ctrl-D/Ctrl-F/Ctrl-B/G in ls-like view.

	Fixed positioning cursor in directory :history when inside custom view.
	Thanks to filterfalse.

	Fixed compilation of modes/view.c when build is configured with
	`--disable-extended-keys`.  Thanks to Bearcat M. Şándor (a.k.a.
	bearcatsandor).

	Fixed crashes discovered via fuzzing, most of which require rather
	unusual kind of input.

	Fixed running commands with arguments on Windows when 'shell' isn't
	cmd.exe.

	Fixed ".." not being preserved in path loaded into custom view.  Thanks to
	filterfalse.

	Fixed directory size in statusline.  Patch by Dmitry Frank (a.k.a.
	dimonomid).

0.9-beta to 0.9

	Escape $ and ` in %" macros on *nix systems.  Thanks to filterfalse.

	Don't use :filextype in sample vifmrc for OS X, we can't tell whether