@@ -373,11 +373,13 @@ hi AuxWin
 " "sizefmt" should be highlighted as 'option'
 " "*millerview" should be highlighted as 'option'
 " "milleroptions" should be highlighted as 'option'
+" "lsoptions" should be highlighted as 'option'
 set dotfiles nodotfiles invdotfiles dotfiles!
 set caseoptions
 set sizefmt
 set millerview nomillerview invmillerview
 set milleroptions
+set lsoptions
 
 " TODO
 
